src/test/deca/context/invalid/created/sans_objet/affectation_boolean_4.deca
// Description:
//    Programme minimaliste utilisant boolean.
//
// Resultats:
//   error :  ligne 12 : variable undeclared
//
// Historique:
//    cree le 01/01/2024

{
        boolean x ;
        x= tru;
}